Add test of attach functionality